--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 DB_CNN= mongodb+srv://mern_user:pZrKO9Sh87wg5Qzk@cluster0.fmlhu.mongodb.net/mern_calendar
+SECRET_JWT_SEED=eSTO-ES-Una_p@labra;SeCrett@1239087.
